# AI-Research-Intelligence

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
arip/: __init__.py  __main__.py  config.py  container.py  entities.py  enums.py  exceptions.py  interfaces.py  logging_setup.py  state_machine.py
arip/db/: __init__.py  database.py  models.py
arip/db/migrations/: env.py
arip/db/migrations/versions/: 0001_initial_schema.py
arip/db/repositories/: __init__.py  items.py
arip/pipeline/: __init__.py  orchestrator.py
arip/sources/: __init__.py  _http.py  arxiv.py  registry.py
config/: settings.yaml
docs/: PROJECT_LOG_GUIDE.md
docs/frozen_sds.md/: frozen_sds.md
project_log/: CURRENT_STATE.md  DESICIONS.md  PROJECT_LOG.md  ROADMAP.md
project_log/batches/: phase1_batch1.md
tests/: README.md
tests/unit/: test_config.py  test_repositories.py  test_state_machine.py
tests/unit/sources/: conftest.py  test_arxiv.py  test_registry.py
