[build-system]
requires = [
    "setuptools>=70",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "arip"
version = "0.1.0"
description = "AI Research Intelligence Platform — discovers, ranks, and publishes AI research digests"
requires-python = ">=3.11"
dependencies = [
    # Config and validation
    "pydantic==2.7.4",
    "pydantic-settings==2.3.4",
    "pyyaml==6.0.1",
    # Database
    "sqlalchemy==2.0.31",
    "alembic==1.13.2",
    # Logging
    "structlog==24.2.0",
    # HTTP
    "httpx==0.27.0",
    "tenacity==8.3.0",
    # Scheduling
    "schedule==1.2.2",
    # Templates
    "jinja2==3.1.4",
    # Env files
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "ruff==0.5.0",
    "respx==0.21.1",
]

# Phase 3+ (added when those phases begin)
# embedding = ["sentence-transformers==3.0.1", "usearch==2.11.0"]
# llm = ["transformers==4.43.0", "torch==2.3.1", "bitsandbytes==0.43.1", "accelerate==0.31.0"]
# review = ["python-telegram-bot==21.4"]
# publish = ["tweepy==4.14.0"]

[project.scripts]
arip = "arip.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["arip*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=arip --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
